[package]
name = "rpi-management-api"
version = "0.1.0"
authors = ["Damien Lecan <dev@dlecan.com>"]

[dependencies]
rustless = { git = "https://github.com/rustless/rustless" }
rustc-serialize = "*"
valico = "*"

[dependencies.hyper]
version = "*"
default-features = false

[dependencies.iron]
version = "*"
default-features = false